<resources>
    <string name="app_name">Manillas</string>
    <string name="titulo">Venta de manillas</string>
    <string name="elegir_material">Elige un tipo de material</string>
    <string name="elige_dije">Elige un tipo de Dije</string>
    <string name="elegir_tipo">Elige un tipo de elemento</string>
    <string name="valor_unitario">Valor Unitario</string>
    <string name="peso">Pesos</string>
    <string name="dolar">Dolares</string>
    <string name="cant_manilla">Cantidad de manillas a llevar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oroRosado">Oro Rosado</string>
    <string name="niquel">Niquel</string>
    <string name="plata">Plata</string>
    <string name="elige_moneda">Elige un tipo de moneda</string>
    <string name="seleccione">Seleccione una opcion...</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="resultado">Valor a pagar:</string>
    <string-array name="opMaterial">
        <item>@string/seleccione</item>
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="opDije">
        <item>@string/seleccione</item>
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="opTipo">
        <item>@string/seleccione</item>
        <item>@string/oro</item>
        <item>@string/oroRosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="opMoneda">
        <item>@string/seleccione</item>
        <item>@string/dolar</item>
        <item>@string/peso</item>
    </string-array>
    <string name="valordolares">Valor total (Dolares):</string>
    <string name="valorpesos">Valor total (Pesos):</string>
    <string name="seleccioneMaterial">Por favor, seleccione un material valido.</string>
    <string name="seleccioneDije">Por favor, seleccione un dije valido.</string>
    <string name="seleccioneTipo">Por favor, seleccione un tipo valido.</string>
    <string name="cantidadInvalida">Por favor, ingrese una cantidad valida</string>
    <string name="cantidadVacia">Por favor, ingrese un valor en cantidad</string>


</resources>
