<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    tools:ignore="ExtraText"><![CDATA[
    >



    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtTipoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elegir_material" />

            <Spinner
                android:id="@+id/cmbMater"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:entries="@array/opMaterial" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elige_dije" />

            <Spinner
                android:id="@+id/cmbDije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/opDije" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elegir_tipo" />

            <Spinner
                android:id="@+id/cmbTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/opTipo" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elige_moneda" />

            <Spinner
                android:id="@+id/cmbMoneda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/opMoneda" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cant_manilla" />

            <EditText
                android:id="@+id/txtCant"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:ems="10"
                android:inputType="number" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCalcular"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calcular" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button"
                    tools:text="@string/limpiar" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>